--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_background_service: ^5.0.5
-  flutter_local_notifications: ^16.3.2
   http: ^1.2.0
   geolocator: ^10.1.0
+  awesome_notifications: ^0.9.2
 
 dev_dependencies:
   flutter_test:
