--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.0
   geolocator: ^10.1.0
   awesome_notifications: ^0.9.2
+  flutter_riverpod: ^2.4.10
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
