--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_riverpod: ^2.4.10
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  build_runner: ^2.4.8
+  device_info_plus: ^9.1.2
 
 dev_dependencies:
   flutter_test:
